src/objects/CountrySLA__mdt.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country Name</description>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement_Process__c</fullName>
        <description>Entitlement Process Name</description>
        <label>Entitlement Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FallbackEntitlementRecord__c</fullName>
        <description>Default entitlement record to be set on cases created through email2case and is not assigned to a contact</description>
        <label>Fallback Entitlement Record</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>